# ml_python_pdf_processing

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.dev.sh  init-s3.py  knowledge.db  pyproject.toml  script.py  script_2.py  script_3.py  script_4.py  task.txt
app/: __init__.py  run.py  setup.py
app/core/: settings.py
app/core/db/: connection.py  session.py
app/dependancies/: service.py
app/dependencies/: service.py
app/models/: document.py  knowledge_base.py
app/routers/rest/: __init__.py
app/routers/rest/v1/: chatbot.py  document.py  index.py
app/services/: ml_service.py  s3_bucket_service.py
app/utils/: extract_test.py
static/: index.html  script.js  styles.css
