[tool.poetry]
name = "otel-sentry-integration"
version = "0.1.0"
description = ""
authors = ["Dmytro Chikunda <dmytro.chikunda@fortegrp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"
sentry-sdk = "^1.39.1"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
