[tool.poetry]
name = "pdp-frocessor"
version = "0.1.0"
description = ""
authors = ["Dmytro Chikunda <dima.chikunda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
fitz = "^0.0.1.dev2"
pymupdf = "^1.26.0"
pdfplumber = "^0.11.6"
python-multipart = "^0.0.20"
aioboto3 = "^14.3.0"
scikit-learn = "^1.3.0"
pypdf2 = "^3.0.1"
ruff = "^0.11.13"
nltk = "^3.9.1"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88